@@ -1,8 +1,18 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 AUX 50gtags-gentoo.el 183 RMD160 cf95e9970c71dd14fad6234ed57b8354d45ead74 SHA1 b338f4153d2cb31e8495a7b640e0e4887dc60ecd SHA256 52531e861595504a3461a483dfc05520acef423932e273cd26461aee66082428
 AUX global-5.9.2-localstatedir.patch 462 RMD160 c62049749464c17d0f02e3d1c8bcc9d539a2e737 SHA1 01102e7c71c0521fd0db71d8528edaa7d8bfdb4e SHA256 0a1ea435397d9a636eaf00aeb46d40b75ed0ba558a097f9e36ec2cec4767380b
 DIST global-5.9.2.tar.gz 1136242 RMD160 90b7a41b2e9983f97c9399169a6a8ed6ce5965e6 SHA1 31ede49e75f7619b91d7483956ffd88e2e3bdf55 SHA256 55e32a188d91862d69ea6fb607c060bef59c72b289bd221285dc9dcaf852dcac
 DIST global-5.9.3.tar.gz 1138586 RMD160 422ed68c54ee3c5181a6b251e2af0c3a42a1b2f8 SHA1 292f75e444898c2689dfdcd9ba8f9d0ca9776dee SHA256 1995751d2a3c44156821d568cdad30d8e94a7fdaf6048d91e44ca925b33b29ba
 EBUILD global-5.9.2-r2.ebuild 1835 RMD160 b6378904e240dde1069c4ef7594945a7b699e5a2 SHA1 6558dcb530955cee0e803d75c0a3a28aa1357c6c SHA256 c31607044869dba8ba9b4e7ef017a25302f95bccbc523691700a14bfc3925830
-EBUILD global-5.9.3.ebuild 1748 RMD160 03a9cce3d8e71fc224b5766404372956925c21c1 SHA1 1e180f12ede61eebc291e1edc64d4d95f6337021 SHA256 27f6c7297a93a6f3cec7eea8ece0f0c6942071d3241e55826d8af782f43528b0
-MISC ChangeLog 9763 RMD160 975d3f9759ed8b6d55849edb8b567b896cc45e9b SHA1 4920ee8ca5771205b0f33d4e72c00f795642dd12 SHA256 12083e23ead1702f3287497b01843e22a3fa0c74db9cd38e276ae61b136b1de3
+EBUILD global-5.9.3.ebuild 1747 RMD160 3680171a8b008fd92d6eba23ffa74a7ceeaca702 SHA1 c091864ca178b2e273d868f99c4daedf2a24c5c7 SHA256 06c43359e63a2fb53456a3c5bbb979471ca408a5a0f2990dc2e0580da56afdb1
+MISC ChangeLog 9872 RMD160 2160a951359f7ddaa27c3f8dc5492313472badae SHA1 26a385c7b02cbea98c0311b03aa96b892ac688c5 SHA256 635f2bd4f58cf926722762e0c0240a2656fb565e96f0e4550ad5201df4ab016c
 MISC metadata.xml 376 RMD160 5b17d22215bf45f79bd8f06c1547ff98eb934547 SHA1 14b18b64877d645c00305c038fd46ff6513a4ee2 SHA256 723138b70a9c832d3f46661405359dfb3adb272421ada86d41960d8296984ddb
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.16 (GNU/Linux)
+
+iEYEARECAAYFAk0x4DUACgkQ9/cejkQaxBCIsgCeIlgeVgQtd8ypAbiRHXgXfsSC
+/tUAn3JuljlXNfwRJk9gqvw+ROl8zYoA
+=KBrI
+-----END PGP SIGNATURE-----
