@@ -1,6 +1,9 @@
 # ChangeLog for dev-util/global
-# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-util/cvs-repo/gentoo-x86/dev-util/global/ChangeLog,v 1.73 2010/12/15 14:47:18 arfrever Exp $
+# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-util/cvs-repo/gentoo-x86/dev-util/global/ChangeLog,v 1.74 2011/01/15 18:00:12 hwoarang Exp $
+
+  15 Jan 2011; Markos Chandras <hwoarang@gentoo.org> global-5.9.3.ebuild:
+  Stable on amd64 wrt bug #351668
 
 *global-5.9.3 (15 Dec 2010)
 
